<resources>
    <string name="app_name">Scala</string>
    <string name="action_settings">Settings</string>
    <string name="movie_detail">movie detail</string>
    <string name="upcoming_movies_title_section">Upcoming movies</string>
    <string name="notifications_title_section">Notifications</string>
    <string name="contact_title_section">Contact</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="address1">Kino Scala</string>
    <string name="address2" translatable="false">Moravské náměstí</string>
    <string name="address3" translatable="false">602 00 Brno</string>
    <string name="ticket_reservation">Ticket reservation</string>
    <string name="ticket_reservation_time">every working day 10am - 5pm</string>
    <string name="ticket_reservation_phone" translatable="false">608 33 00 88</string>
    <string name="box_office">Box office</string>
    <string name="box_office_time">Moday – Sunday 5pm – 9pm</string>
    <string name="box_office_phone" translatable="false">778 448 574</string>
    <string name="general_questions">General questions</string>
    <string name="general_questions_mail" translatable="false">info@kinoscala.cz</string>
    <string name="downloading_movie">Downloading detail</string>
    <string name="reservation">Reservation</string>
    <string name="downloading_movies">Downloading movies</string>
    <string name="imdb_no_rating">not yet rated</string>
    <string name="price_not_available">price not available</string>
    <string name="price">Price</string>
    <string name="trailer">Trailer</string>
    <string name="notify">Remind me</string>
    <string name="noWifi1">"Please connect to internet for most recent movies."</string>
    <string name="noWifi2">"Please connect to internet for movie details."</string>
    <string name="tram_stop">Tram stop Česká</string>
    <string name="tram_no">Tram No. 3, 4, 5, 6, 9, 11</string>
    <string name="bus_no">Bus No. 81, 82</string>
    <string name="notification_added">Notification added</string>
    <string name="notification_not_added">Notification can not be added...</string>
    <string name="imdb_not_found">Imdb page not available</string>
    <string name="csfd_not_found">Čsfd page not available</string>
    <string name="youtube_not_found">Traler not available</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="movie_image">movie image</string>
    <string name="remove_notification">Remove notification</string>

</resources>
