<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="cz.kinoscala.scala.fragment.ContactsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/ticket_reservation"
        android:text="@string/ticket_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/ticket_reservation_time"
        android:text="@string/ticket_reservation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ticket_reservation"/>

    <TextView
        android:id="@+id/ticket_reservation_phone"
        android:text="@string/ticket_reservation_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/ticket_reservation_time"/>
    <TextView
        android:id="@+id/box_office"
        android:text="@string/box_office"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ticket_reservation_phone" />

    <TextView
        android:id="@+id/box_office_time"
        android:text="@string/box_office_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/box_office"/>
    <TextView
        android:id="@+id/box_office_number"
        android:text="@string/box_office_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/box_office_time"/>
    <TextView
        android:id="@+id/general_questions"
        android:text="@string/general_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/box_office_number"/>
    <TextView
        android:id="@+id/general_questions_mail"
        android:text="@string/general_questions_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/general_questions"/>

    <ImageView
        android:id="@+id/mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/mapa"
        android:layout_below="@id/general_questions_mail" />
    <TextView
        android:id="@+id/address1"
        android:text="@string/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mapa" />
    <TextView
        android:id="@+id/address2"
        android:text="@string/address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/address1" />
    <TextView
        android:id="@+id/address3"
        android:text="@string/address3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/address2" />
    <!--<ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/call"
        android:layout_toRightOf="@id/ticket_reservation_time"
        android:layout_marginTop="16dp"/> -->
    <ImageButton
        android:id="@+id/ticket_reservation_call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/call"
        android:background="@color/black"
        android:layout_toRightOf="@id/ticket_reservation_time"
        android:layout_marginTop="15dp"/>
    <ImageButton
        android:id="@+id/box_office_call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/call"
        android:background="@color/black"
        android:layout_toRightOf="@id/ticket_reservation_time"
        android:layout_below="@id/ticket_reservation_phone"/>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>